使用Spring Cache缓存套餐数据

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     port: 6379
     password: hrj666
     database: 0
+  cache:
+    redis:
+      time-to-live: 1800000 #缓存过期时间
   application:
     name: Dining
   datasource:
